// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there are few data points 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        id="line-chart"
      >
        <div
          class="ant-card ant-card-bordered"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                Orders Total Price
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="recharts-wrapper"
              style="position: relative; cursor: default; width: 800px; height: 400px;"
            >
              <svg
                class="recharts-surface"
                height="400"
                version="1.1"
                viewBox="0 0 800 400"
                width="800"
              >
                <defs>
                  <clippath
                    id="recharts2-clip"
                  >
                    <rect
                      height="360"
                      width="730"
                      x="65"
                      y="5"
                    />
                  </clippath>
                </defs>
                <g
                  class="recharts-cartesian-grid"
                >
                  <g
                    class="recharts-cartesian-grid-horizontal"
                  >
                    <line
                      fill="none"
                      height="360"
                      stroke="#ccc"
                      stroke-dasharray="3 3"
                      width="730"
                      x="65"
                      x1="65"
                      x2="795"
                      y="5"
                      y1="365"
                      y2="365"
                    />
                    <line
                      fill="none"
                      height="360"
                      stroke="#ccc"
                      stroke-dasharray="3 3"
                      width="730"
                      x="65"
                      x1="65"
                      x2="795"
                      y="5"
                      y1="275"
                      y2="275"
                    />
                    <line
                      fill="none"
                      height="360"
                      stroke="#ccc"
                      stroke-dasharray="3 3"
                      width="730"
                      x="65"
                      x1="65"
                      x2="795"
                      y="5"
                      y1="185"
                      y2="185"
                    />
                    <line
                      fill="none"
                      height="360"
                      stroke="#ccc"
                      stroke-dasharray="3 3"
                      width="730"
                      x="65"
                      x1="65"
                      x2="795"
                      y="5"
                      y1="95"
                      y2="95"
                    />
                    <line
                      fill="none"
                      height="360"
                      stroke="#ccc"
                      stroke-dasharray="3 3"
                      width="730"
                      x="65"
                      x1="65"
                      x2="795"
                      y="5"
                      y1="5"
                      y2="5"
                    />
                  </g>
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
                >
                  <line
                    class="recharts-cartesian-axis-line"
                    fill="none"
                    height="30"
                    stroke="#666"
                    width="730"
                    x="65"
                    x1="65"
                    x2="795"
                    y="365"
                    y1="365"
                    y2="365"
                  />
                  <g
                    class="recharts-cartesian-axis-ticks"
                  >
                    <g
                      class="recharts-layer recharts-cartesian-axis-tick"
                    >
                      <line
                        class="recharts-cartesian-axis-tick-line"
                        fill="none"
                        height="30"
                        stroke="#666"
                        width="730"
                        x="65"
                        x1="65"
                        x2="65"
                        y="365"
                        y1="371"
                        y2="365"
                      />
                      <text
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        fill="#666"
                        height="30"
                        stroke="none"
                        text-anchor="middle"
                        width="730"
                        x="65"
                        y="373"
                      >
                        <tspan
                          dy="0.71em"
                          x="65"
                        >
                          2020-09-06
                        </tspan>
                      </text>
                    </g>
                    <g
                      class="recharts-layer recharts-cartesian-axis-tick"
                    >
                      <line
                        class="recharts-cartesian-axis-tick-line"
                        fill="none"
                        height="30"
                        stroke="#666"
                        width="730"
                        x="65"
                        x1="308.33333333333337"
                        x2="308.33333333333337"
                        y="365"
                        y1="371"
                        y2="365"
                      />
                      <text
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        fill="#666"
                        height="30"
                        stroke="none"
                        text-anchor="middle"
                        width="730"
                        x="308.33333333333337"
                        y="373"
                      >
                        <tspan
                          dy="0.71em"
                          x="308.33333333333337"
                        >
                          2020-09-09
                        </tspan>
                      </text>
                    </g>
                    <g
                      class="recharts-layer recharts-cartesian-axis-tick"
                    >
                      <line
                        class="recharts-cartesian-axis-tick-line"
                        fill="none"
                        height="30"
                        stroke="#666"
                        width="730"
                        x="65"
                        x1="551.6666666666667"
                        x2="551.6666666666667"
                        y="365"
                        y1="371"
                        y2="365"
                      />
                      <text
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        fill="#666"
                        height="30"
                        stroke="none"
                        text-anchor="middle"
                        width="730"
                        x="551.6666666666667"
                        y="373"
                      >
                        <tspan
                          dy="0.71em"
                          x="551.6666666666667"
                        >
                          2020-09-012
                        </tspan>
                      </text>
                    </g>
                    <g
                      class="recharts-layer recharts-cartesian-axis-tick"
                    >
                      <line
                        class="recharts-cartesian-axis-tick-line"
                        fill="none"
                        height="30"
                        stroke="#666"
                        width="730"
                        x="65"
                        x1="795"
                        x2="795"
                        y="365"
                        y1="371"
                        y2="365"
                      />
                      <text
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        fill="#666"
                        height="30"
                        stroke="none"
                        text-anchor="middle"
                        width="730"
                        x="795"
                        y="373"
                      >
                        <tspan
                          dy="0.71em"
                          x="795"
                        >
                          2020-09-20
                        </tspan>
                      </text>
                    </g>
                  </g>
                </g>
                <g
                  class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
                >
                  <line
                    class="recharts-cartesian-axis-line"
                    fill="none"
                    height="360"
                    stroke="#666"
                    width="60"
                    x="5"
                    x1="65"
                    x2="65"
                    y="5"
                    y1="5"
                    y2="365"
                  />
                  <g
                    class="recharts-cartesian-axis-ticks"
                  >
                    <g
                      class="recharts-layer recharts-cartesian-axis-tick"
                    >
                      <line
                        class="recharts-cartesian-axis-tick-line"
                        fill="none"
                        height="360"
                        stroke="#666"
                        width="60"
                        x="5"
                        x1="59"
                        x2="65"
                        y="5"
                        y1="365"
                        y2="365"
                      />
                      <text
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        fill="#666"
                        height="360"
                        stroke="none"
                        text-anchor="end"
                        width="60"
                        x="57"
                        y="365"
                      >
                        <tspan
                          dy="0.355em"
                          x="57"
                        >
                          0
                        </tspan>
                      </text>
                    </g>
                    <g
                      class="recharts-layer recharts-cartesian-axis-tick"
                    >
                      <line
                        class="recharts-cartesian-axis-tick-line"
                        fill="none"
                        height="360"
                        stroke="#666"
                        width="60"
                        x="5"
                        x1="59"
                        x2="65"
                        y="5"
                        y1="275"
                        y2="275"
                      />
                      <text
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        fill="#666"
                        height="360"
                        stroke="none"
                        text-anchor="end"
                        width="60"
                        x="57"
                        y="275"
                      >
                        <tspan
                          dy="0.355em"
                          x="57"
                        >
                          35
                        </tspan>
                      </text>
                    </g>
                    <g
                      class="recharts-layer recharts-cartesian-axis-tick"
                    >
                      <line
                        class="recharts-cartesian-axis-tick-line"
                        fill="none"
                        height="360"
                        stroke="#666"
                        width="60"
                        x="5"
                        x1="59"
                        x2="65"
                        y="5"
                        y1="185"
                        y2="185"
                      />
                      <text
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        fill="#666"
                        height="360"
                        stroke="none"
                        text-anchor="end"
                        width="60"
                        x="57"
                        y="185"
                      >
                        <tspan
                          dy="0.355em"
                          x="57"
                        >
                          70
                        </tspan>
                      </text>
                    </g>
                    <g
                      class="recharts-layer recharts-cartesian-axis-tick"
                    >
                      <line
                        class="recharts-cartesian-axis-tick-line"
                        fill="none"
                        height="360"
                        stroke="#666"
                        width="60"
                        x="5"
                        x1="59"
                        x2="65"
                        y="5"
                        y1="95"
                        y2="95"
                      />
                      <text
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        fill="#666"
                        height="360"
                        stroke="none"
                        text-anchor="end"
                        width="60"
                        x="57"
                        y="95"
                      >
                        <tspan
                          dy="0.355em"
                          x="57"
                        >
                          105
                        </tspan>
                      </text>
                    </g>
                    <g
                      class="recharts-layer recharts-cartesian-axis-tick"
                    >
                      <line
                        class="recharts-cartesian-axis-tick-line"
                        fill="none"
                        height="360"
                        stroke="#666"
                        width="60"
                        x="5"
                        x1="59"
                        x2="65"
                        y="5"
                        y1="5"
                        y2="5"
                      />
                      <text
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        fill="#666"
                        height="360"
                        stroke="none"
                        text-anchor="end"
                        width="60"
                        x="57"
                        y="5"
                      >
                        <tspan
                          dy="0.355em"
                          x="57"
                        >
                          140
                        </tspan>
                      </text>
                    </g>
                  </g>
                </g>
                <g
                  class="recharts-layer recharts-line"
                >
                  <path
                    class="recharts-curve recharts-line-curve"
                    d="M65,210.7142857142857L308.33333333333337,275L551.6666666666667,179.8571428571429L795,43.571428571428555"
                    fill="none"
                    height="360"
                    stroke="#8884d8"
                    stroke-dasharray="0px 0px"
                    stroke-width="3"
                    width="730"
                  />
                </g>
              </svg>
              <div
                class="recharts-legend-wrapper"
                style="position: absolute; width: 790px; height: auto; left: 5px; bottom: 5px;"
              >
                <ul
                  class="recharts-default-legend"
                  style="padding: 0px; margin: 0px; text-align: center;"
                >
                  <li
                    class="recharts-legend-item legend-item-0"
                    style="display: inline-block; margin-right: 10px;"
                  >
                    <svg
                      class="recharts-surface"
                      height="14"
                      style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                      version="1.1"
                      viewBox="0 0 32 32"
                      width="14"
                    >
                      <path
                        class="recharts-legend-icon"
                        d="M0,16h10.666666666666666
            A5.333333333333333,5.333333333333333,0,1,1,21.333333333333332,16
            H32M21.333333333333332,16
            A5.333333333333333,5.333333333333333,0,1,1,10.666666666666666,16"
                        fill="none"
                        stroke="#8884d8"
                        stroke-width="4"
                      />
                    </svg>
                    <span
                      class="recharts-legend-item-text"
                    >
                      amount
                    </span>
                  </li>
                </ul>
              </div>
              <div
                class="recharts-tooltip-wrapper"
                style="transform: translate(undefinedpx, undefinedpx); pointer-events: none; visibility: hidden; position: absolute; top: 0px;"
              >
                <div
                  class="recharts-default-tooltip"
                  style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid #ccc; white-space: nowrap;"
                >
                  <p
                    class="recharts-tooltip-label"
                    style="margin: 0px;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      id="recharts_measurement_span"
      style="position: absolute; top: -20000px; left: 0px; padding: 0px; margin: 0px; white-space: pre;"
    >
       
    </span>
  </body>,
  "container": <div>
    <div
      id="line-chart"
    >
      <div
        class="ant-card ant-card-bordered"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Orders Total Price
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            class="recharts-wrapper"
            style="position: relative; cursor: default; width: 800px; height: 400px;"
          >
            <svg
              class="recharts-surface"
              height="400"
              version="1.1"
              viewBox="0 0 800 400"
              width="800"
            >
              <defs>
                <clippath
                  id="recharts2-clip"
                >
                  <rect
                    height="360"
                    width="730"
                    x="65"
                    y="5"
                  />
                </clippath>
              </defs>
              <g
                class="recharts-cartesian-grid"
              >
                <g
                  class="recharts-cartesian-grid-horizontal"
                >
                  <line
                    fill="none"
                    height="360"
                    stroke="#ccc"
                    stroke-dasharray="3 3"
                    width="730"
                    x="65"
                    x1="65"
                    x2="795"
                    y="5"
                    y1="365"
                    y2="365"
                  />
                  <line
                    fill="none"
                    height="360"
                    stroke="#ccc"
                    stroke-dasharray="3 3"
                    width="730"
                    x="65"
                    x1="65"
                    x2="795"
                    y="5"
                    y1="275"
                    y2="275"
                  />
                  <line
                    fill="none"
                    height="360"
                    stroke="#ccc"
                    stroke-dasharray="3 3"
                    width="730"
                    x="65"
                    x1="65"
                    x2="795"
                    y="5"
                    y1="185"
                    y2="185"
                  />
                  <line
                    fill="none"
                    height="360"
                    stroke="#ccc"
                    stroke-dasharray="3 3"
                    width="730"
                    x="65"
                    x1="65"
                    x2="795"
                    y="5"
                    y1="95"
                    y2="95"
                  />
                  <line
                    fill="none"
                    height="360"
                    stroke="#ccc"
                    stroke-dasharray="3 3"
                    width="730"
                    x="65"
                    x1="65"
                    x2="795"
                    y="5"
                    y1="5"
                    y2="5"
                  />
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
              >
                <line
                  class="recharts-cartesian-axis-line"
                  fill="none"
                  height="30"
                  stroke="#666"
                  width="730"
                  x="65"
                  x1="65"
                  x2="795"
                  y="365"
                  y1="365"
                  y2="365"
                />
                <g
                  class="recharts-cartesian-axis-ticks"
                >
                  <g
                    class="recharts-layer recharts-cartesian-axis-tick"
                  >
                    <line
                      class="recharts-cartesian-axis-tick-line"
                      fill="none"
                      height="30"
                      stroke="#666"
                      width="730"
                      x="65"
                      x1="65"
                      x2="65"
                      y="365"
                      y1="371"
                      y2="365"
                    />
                    <text
                      class="recharts-text recharts-cartesian-axis-tick-value"
                      fill="#666"
                      height="30"
                      stroke="none"
                      text-anchor="middle"
                      width="730"
                      x="65"
                      y="373"
                    >
                      <tspan
                        dy="0.71em"
                        x="65"
                      >
                        2020-09-06
                      </tspan>
                    </text>
                  </g>
                  <g
                    class="recharts-layer recharts-cartesian-axis-tick"
                  >
                    <line
                      class="recharts-cartesian-axis-tick-line"
                      fill="none"
                      height="30"
                      stroke="#666"
                      width="730"
                      x="65"
                      x1="308.33333333333337"
                      x2="308.33333333333337"
                      y="365"
                      y1="371"
                      y2="365"
                    />
                    <text
                      class="recharts-text recharts-cartesian-axis-tick-value"
                      fill="#666"
                      height="30"
                      stroke="none"
                      text-anchor="middle"
                      width="730"
                      x="308.33333333333337"
                      y="373"
                    >
                      <tspan
                        dy="0.71em"
                        x="308.33333333333337"
                      >
                        2020-09-09
                      </tspan>
                    </text>
                  </g>
                  <g
                    class="recharts-layer recharts-cartesian-axis-tick"
                  >
                    <line
                      class="recharts-cartesian-axis-tick-line"
                      fill="none"
                      height="30"
                      stroke="#666"
                      width="730"
                      x="65"
                      x1="551.6666666666667"
                      x2="551.6666666666667"
                      y="365"
                      y1="371"
                      y2="365"
                    />
                    <text
                      class="recharts-text recharts-cartesian-axis-tick-value"
                      fill="#666"
                      height="30"
                      stroke="none"
                      text-anchor="middle"
                      width="730"
                      x="551.6666666666667"
                      y="373"
                    >
                      <tspan
                        dy="0.71em"
                        x="551.6666666666667"
                      >
                        2020-09-012
                      </tspan>
                    </text>
                  </g>
                  <g
                    class="recharts-layer recharts-cartesian-axis-tick"
                  >
                    <line
                      class="recharts-cartesian-axis-tick-line"
                      fill="none"
                      height="30"
                      stroke="#666"
                      width="730"
                      x="65"
                      x1="795"
                      x2="795"
                      y="365"
                      y1="371"
                      y2="365"
                    />
                    <text
                      class="recharts-text recharts-cartesian-axis-tick-value"
                      fill="#666"
                      height="30"
                      stroke="none"
                      text-anchor="middle"
                      width="730"
                      x="795"
                      y="373"
                    >
                      <tspan
                        dy="0.71em"
                        x="795"
                      >
                        2020-09-20
                      </tspan>
                    </text>
                  </g>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
              >
                <line
                  class="recharts-cartesian-axis-line"
                  fill="none"
                  height="360"
                  stroke="#666"
                  width="60"
                  x="5"
                  x1="65"
                  x2="65"
                  y="5"
                  y1="5"
                  y2="365"
                />
                <g
                  class="recharts-cartesian-axis-ticks"
                >
                  <g
                    class="recharts-layer recharts-cartesian-axis-tick"
                  >
                    <line
                      class="recharts-cartesian-axis-tick-line"
                      fill="none"
                      height="360"
                      stroke="#666"
                      width="60"
                      x="5"
                      x1="59"
                      x2="65"
                      y="5"
                      y1="365"
                      y2="365"
                    />
                    <text
                      class="recharts-text recharts-cartesian-axis-tick-value"
                      fill="#666"
                      height="360"
                      stroke="none"
                      text-anchor="end"
                      width="60"
                      x="57"
                      y="365"
                    >
                      <tspan
                        dy="0.355em"
                        x="57"
                      >
                        0
                      </tspan>
                    </text>
                  </g>
                  <g
                    class="recharts-layer recharts-cartesian-axis-tick"
                  >
                    <line
                      class="recharts-cartesian-axis-tick-line"
                      fill="none"
                      height="360"
                      stroke="#666"
                      width="60"
                      x="5"
                      x1="59"
                      x2="65"
                      y="5"
                      y1="275"
                      y2="275"
                    />
                    <text
                      class="recharts-text recharts-cartesian-axis-tick-value"
                      fill="#666"
                      height="360"
                      stroke="none"
                      text-anchor="end"
                      width="60"
                      x="57"
                      y="275"
                    >
                      <tspan
                        dy="0.355em"
                        x="57"
                      >
                        35
                      </tspan>
                    </text>
                  </g>
                  <g
                    class="recharts-layer recharts-cartesian-axis-tick"
                  >
                    <line
                      class="recharts-cartesian-axis-tick-line"
                      fill="none"
                      height="360"
                      stroke="#666"
                      width="60"
                      x="5"
                      x1="59"
                      x2="65"
                      y="5"
                      y1="185"
                      y2="185"
                    />
                    <text
                      class="recharts-text recharts-cartesian-axis-tick-value"
                      fill="#666"
                      height="360"
                      stroke="none"
                      text-anchor="end"
                      width="60"
                      x="57"
                      y="185"
                    >
                      <tspan
                        dy="0.355em"
                        x="57"
                      >
                        70
                      </tspan>
                    </text>
                  </g>
                  <g
                    class="recharts-layer recharts-cartesian-axis-tick"
                  >
                    <line
                      class="recharts-cartesian-axis-tick-line"
                      fill="none"
                      height="360"
                      stroke="#666"
                      width="60"
                      x="5"
                      x1="59"
                      x2="65"
                      y="5"
                      y1="95"
                      y2="95"
                    />
                    <text
                      class="recharts-text recharts-cartesian-axis-tick-value"
                      fill="#666"
                      height="360"
                      stroke="none"
                      text-anchor="end"
                      width="60"
                      x="57"
                      y="95"
                    >
                      <tspan
                        dy="0.355em"
                        x="57"
                      >
                        105
                      </tspan>
                    </text>
                  </g>
                  <g
                    class="recharts-layer recharts-cartesian-axis-tick"
                  >
                    <line
                      class="recharts-cartesian-axis-tick-line"
                      fill="none"
                      height="360"
                      stroke="#666"
                      width="60"
                      x="5"
                      x1="59"
                      x2="65"
                      y="5"
                      y1="5"
                      y2="5"
                    />
                    <text
                      class="recharts-text recharts-cartesian-axis-tick-value"
                      fill="#666"
                      height="360"
                      stroke="none"
                      text-anchor="end"
                      width="60"
                      x="57"
                      y="5"
                    >
                      <tspan
                        dy="0.355em"
                        x="57"
                      >
                        140
                      </tspan>
                    </text>
                  </g>
                </g>
              </g>
              <g
                class="recharts-layer recharts-line"
              >
                <path
                  class="recharts-curve recharts-line-curve"
                  d="M65,210.7142857142857L308.33333333333337,275L551.6666666666667,179.8571428571429L795,43.571428571428555"
                  fill="none"
                  height="360"
                  stroke="#8884d8"
                  stroke-dasharray="0px 0px"
                  stroke-width="3"
                  width="730"
                />
              </g>
            </svg>
            <div
              class="recharts-legend-wrapper"
              style="position: absolute; width: 790px; height: auto; left: 5px; bottom: 5px;"
            >
              <ul
                class="recharts-default-legend"
                style="padding: 0px; margin: 0px; text-align: center;"
              >
                <li
                  class="recharts-legend-item legend-item-0"
                  style="display: inline-block; margin-right: 10px;"
                >
                  <svg
                    class="recharts-surface"
                    height="14"
                    style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                    version="1.1"
                    viewBox="0 0 32 32"
                    width="14"
                  >
                    <path
                      class="recharts-legend-icon"
                      d="M0,16h10.666666666666666
            A5.333333333333333,5.333333333333333,0,1,1,21.333333333333332,16
            H32M21.333333333333332,16
            A5.333333333333333,5.333333333333333,0,1,1,10.666666666666666,16"
                      fill="none"
                      stroke="#8884d8"
                      stroke-width="4"
                    />
                  </svg>
                  <span
                    class="recharts-legend-item-text"
                  >
                    amount
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="recharts-tooltip-wrapper"
              style="transform: translate(undefinedpx, undefinedpx); pointer-events: none; visibility: hidden; position: absolute; top: 0px;"
            >
              <div
                class="recharts-default-tooltip"
                style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid #ccc; white-space: nowrap;"
              >
                <p
                  class="recharts-tooltip-label"
                  style="margin: 0px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders correctly when there is no data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        id="line-chart"
      >
        <div
          class="ant-card ant-card-bordered"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                Orders Total Price
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-empty"
              data-testid="linechart-empty"
            >
              <div
                class="ant-empty-image"
              >
                <svg
                  class="ant-empty-img-default"
                  height="152"
                  viewBox="0 0 184 152"
                  width="184"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                  >
                    <g
                      transform="translate(24 31.67)"
                    >
                      <ellipse
                        class="ant-empty-img-default-ellipse"
                        cx="67.797"
                        cy="106.89"
                        rx="67.797"
                        ry="12.668"
                      />
                      <path
                        class="ant-empty-img-default-path-1"
                        d="M122.034 69.674L98.109 40.229c-1.148-1.386-2.826-2.225-4.593-2.225h-51.44c-1.766 0-3.444.839-4.592 2.225L13.56 69.674v15.383h108.475V69.674z"
                      />
                      <path
                        class="ant-empty-img-default-path-2"
                        d="M101.537 86.214L80.63 61.102c-1.001-1.207-2.507-1.867-4.048-1.867H31.724c-1.54 0-3.047.66-4.048 1.867L6.769 86.214v13.792h94.768V86.214z"
                        transform="translate(13.56)"
                      />
                      <path
                        class="ant-empty-img-default-path-3"
                        d="M33.83 0h67.933a4 4 0 0 1 4 4v93.344a4 4 0 0 1-4 4H33.83a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z"
                      />
                      <path
                        class="ant-empty-img-default-path-4"
                        d="M42.678 9.953h50.237a2 2 0 0 1 2 2V36.91a2 2 0 0 1-2 2H42.678a2 2 0 0 1-2-2V11.953a2 2 0 0 1 2-2zM42.94 49.767h49.713a2.262 2.262 0 1 1 0 4.524H42.94a2.262 2.262 0 0 1 0-4.524zM42.94 61.53h49.713a2.262 2.262 0 1 1 0 4.525H42.94a2.262 2.262 0 0 1 0-4.525zM121.813 105.032c-.775 3.071-3.497 5.36-6.735 5.36H20.515c-3.238 0-5.96-2.29-6.734-5.36a7.309 7.309 0 0 1-.222-1.79V69.675h26.318c2.907 0 5.25 2.448 5.25 5.42v.04c0 2.971 2.37 5.37 5.277 5.37h34.785c2.907 0 5.277-2.421 5.277-5.393V75.1c0-2.972 2.343-5.426 5.25-5.426h26.318v33.569c0 .617-.077 1.216-.221 1.789z"
                      />
                    </g>
                    <path
                      class="ant-empty-img-default-path-5"
                      d="M149.121 33.292l-6.83 2.65a1 1 0 0 1-1.317-1.23l1.937-6.207c-2.589-2.944-4.109-6.534-4.109-10.408C138.802 8.102 148.92 0 161.402 0 173.881 0 184 8.102 184 18.097c0 9.995-10.118 18.097-22.599 18.097-4.528 0-8.744-1.066-12.28-2.902z"
                    />
                    <g
                      class="ant-empty-img-default-g"
                      transform="translate(149.65 15.383)"
                    >
                      <ellipse
                        cx="20.654"
                        cy="3.167"
                        rx="2.849"
                        ry="2.815"
                      />
                      <path
                        d="M5.698 5.63H0L2.898.704zM9.259.704h4.985V5.63H9.259z"
                      />
                    </g>
                  </g>
                </svg>
              </div>
              <p
                class="ant-empty-description"
              >
                No Data
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      id="line-chart"
    >
      <div
        class="ant-card ant-card-bordered"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Orders Total Price
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            class="ant-empty"
            data-testid="linechart-empty"
          >
            <div
              class="ant-empty-image"
            >
              <svg
                class="ant-empty-img-default"
                height="152"
                viewBox="0 0 184 152"
                width="184"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <g
                    transform="translate(24 31.67)"
                  >
                    <ellipse
                      class="ant-empty-img-default-ellipse"
                      cx="67.797"
                      cy="106.89"
                      rx="67.797"
                      ry="12.668"
                    />
                    <path
                      class="ant-empty-img-default-path-1"
                      d="M122.034 69.674L98.109 40.229c-1.148-1.386-2.826-2.225-4.593-2.225h-51.44c-1.766 0-3.444.839-4.592 2.225L13.56 69.674v15.383h108.475V69.674z"
                    />
                    <path
                      class="ant-empty-img-default-path-2"
                      d="M101.537 86.214L80.63 61.102c-1.001-1.207-2.507-1.867-4.048-1.867H31.724c-1.54 0-3.047.66-4.048 1.867L6.769 86.214v13.792h94.768V86.214z"
                      transform="translate(13.56)"
                    />
                    <path
                      class="ant-empty-img-default-path-3"
                      d="M33.83 0h67.933a4 4 0 0 1 4 4v93.344a4 4 0 0 1-4 4H33.83a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z"
                    />
                    <path
                      class="ant-empty-img-default-path-4"
                      d="M42.678 9.953h50.237a2 2 0 0 1 2 2V36.91a2 2 0 0 1-2 2H42.678a2 2 0 0 1-2-2V11.953a2 2 0 0 1 2-2zM42.94 49.767h49.713a2.262 2.262 0 1 1 0 4.524H42.94a2.262 2.262 0 0 1 0-4.524zM42.94 61.53h49.713a2.262 2.262 0 1 1 0 4.525H42.94a2.262 2.262 0 0 1 0-4.525zM121.813 105.032c-.775 3.071-3.497 5.36-6.735 5.36H20.515c-3.238 0-5.96-2.29-6.734-5.36a7.309 7.309 0 0 1-.222-1.79V69.675h26.318c2.907 0 5.25 2.448 5.25 5.42v.04c0 2.971 2.37 5.37 5.277 5.37h34.785c2.907 0 5.277-2.421 5.277-5.393V75.1c0-2.972 2.343-5.426 5.25-5.426h26.318v33.569c0 .617-.077 1.216-.221 1.789z"
                    />
                  </g>
                  <path
                    class="ant-empty-img-default-path-5"
                    d="M149.121 33.292l-6.83 2.65a1 1 0 0 1-1.317-1.23l1.937-6.207c-2.589-2.944-4.109-6.534-4.109-10.408C138.802 8.102 148.92 0 161.402 0 173.881 0 184 8.102 184 18.097c0 9.995-10.118 18.097-22.599 18.097-4.528 0-8.744-1.066-12.28-2.902z"
                  />
                  <g
                    class="ant-empty-img-default-g"
                    transform="translate(149.65 15.383)"
                  >
                    <ellipse
                      cx="20.654"
                      cy="3.167"
                      rx="2.849"
                      ry="2.815"
                    />
                    <path
                      d="M5.698 5.63H0L2.898.704zM9.259.704h4.985V5.63H9.259z"
                    />
                  </g>
                </g>
              </svg>
            </div>
            <p
              class="ant-empty-description"
            >
              No Data
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
